--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,21 @@
 version: "3.8"
 services:
+  nginx:
+    build: ./nginx
+    container_name: nginx
+    ports:
+      - "80:80"
+    expose:
+      - 80
+    networks:
+      - internalnet
+    volumes:
+      - ./nginx/default.conf.template:/etc/nginx/templates/default.conf.template
+    environment:
+      - NGINX_HOST=localhost
+      - NGINX_PORT=80
+      - SERVER_HOST=frontend
+      - SERVER_PORT=3000
   mysql:
     image: mysql:8.0
     container_name: mysql
@@ -32,8 +48,8 @@ services:
     build: ./server
     ports:
       - "5000:5000"
-    expose:
-      - 5000 
+    # expose:
+    #   - 5000 
     environment:
       - PORT=5000
       - CORS_ORIGIN=http://localhost:3000
