--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   nginx:
-    build: ./nginx
+    image: nginx:alpine
     container_name: nginx
     ports:
       - "80:80"
@@ -39,7 +39,7 @@ services:
     expose:
       - 3000                                              
     environment:
-      - REACT_APP_API_URL=http://backend:5000
+      - REACT_APP_API_URL=http://backend:5050
     depends_on:
       - backend
     networks:
@@ -47,11 +47,11 @@ services:
   backend:
     build: ./server
     ports:
-      - "5000:5000"
+      - "5050:5000"
     # expose:
-    #   - 5000 
+    #   - 5050 
     environment:
-      - PORT=5000
+      - PORT=5050
       - CORS_ORIGIN=http://localhost:3000
       - DB_HOST=mysql
       - DB_USER=root
